@@ -44,6 +44,7 @@ import java.io.FilenameFilter;
 import java.io.IOException;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -490,19 +491,24 @@ public final class FileUtils {
 				final int bang = url.indexOf("!/");
 				if (bang < 0) return result;
 				final String prefix = url.substring(bang + 2);
+				final String baseURL = url.substring(0, bang + 2);
 
 				final JarURLConnection connection =
-					(JarURLConnection) new URL(url.substring(0, bang + 2)).openConnection();
+					(JarURLConnection) new URL(baseURL).openConnection();
 				final JarFile jar = connection.getJarFile();
 				for (final JarEntry entry : new IteratorPlus<JarEntry>(jar.entries())) {
-					if (entry.getName().startsWith(prefix)) {
-						result.add(new URL(url.substring(0, bang + 2) + entry.getName()));
+					final String urlEncoded = new URI(null, null, entry.getName(), null).toString();
+					if (urlEncoded.startsWith(prefix)) {
+						result.add(new URL(baseURL + urlEncoded));
 					}
 				}
 				jar.close();
 			}
 			catch (IOException e) {
 				e.printStackTrace();
+			}
+			catch (final URISyntaxException e) {
+				throw new IllegalArgumentException(e);
 			}
 		}
 		return result;
